--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,8 +1,8 @@
 ---
 export interface Props {
 	title: string;
-	body: string;
-	href: string;
+	body?: string;
+	href?: string;
 }
 
 const { href, title, body } = Astro.props as Props;
