--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ export interface Post {
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
+import Login from "../components/Login"
+
 
 const res = await fetch(`https://jsonplaceholder.typicode.com/todos/`);
 const results = await res.json();
@@ -16,6 +18,7 @@ const results = await res.json();
 
 <Layout title="Welcome to Astro.">
 	<main>
+	<Login />
 	<ul role="list" class="link-card-grid">
 		{results.map((r:Post)=>(<Card title={r.title} completed={r.completed} />))}
 		</ul>
