--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,16 +3,15 @@ export interface Props {
 	title: string;
 	body?: string;
 	href?: string;
-	completed: boolean;
 }
 
-const { href, title, body, completed } = Astro.props as Props;
+const { href, title, body } = Astro.props as Props;
 ---
 
 <li class="link-card">
-	<a class={completed ? 'completed':''} href={href}>
+	<a href={href}>
 		<h2>
-			{title} {completed}
+			{title}
 			<span>&rarr;</span>
 		</h2>
 		<p>
