--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const results = await res.json();
 <Layout title="Welcome to Astro.">
 	<main>
 	<ul role="list" class="link-card-grid">
-		{results.map(({title,body}:Post)=>(<Card title={title} body={body} />))}
+		{results.map(({title,body,id}:Post)=>(<Card id={id} title={title} body={body} />))}
 		</ul>
 	</main>
 	<Login client:visible />
